# axum-askama-app-admin

./: .env.example  .gitignore  ARCHITECTURE_GUIDE.md  Cargo.toml  README.md  cookies.txt  schema.sql
src/: main.rs  pool.rs  state.rs  utils.rs
src/controllers/: auth_controller.rs  mod.rs
src/controllers/page_controller/: admin.rs  api.rs  mod.rs  public.rs  shared.rs
src/models/: mod.rs
src/models/entities/: admin.rs  country.rs  datatable.rs  forms.rs  mod.rs  queries.rs  state.rs  user.rs
src/repository/: admin_repository.rs  country_repository.rs  mod.rs  state_repository.rs  user_repository.rs
src/routes/: admin.rs  mod.rs  public.rs
src/routes/api/: mod.rs  v1.rs  v2.rs
src/views/templates/: admin.rs  mod.rs  user.rs
static/css/: custom.css
static/js/: admin-user-form.js  users-datatable.js
templates/: base.html  error.html  index.html  login_admin.html
templates/admin/: base.html  dashboard.html  error.html
templates/admin/geo/: countries_list.html  country_form.html  state_form.html  states_list.html
templates/admin/users/: create.html  detail.html  edit.html  list.html
