[package]
name = "axum-askama-app"
version = "0.1.0"
edition = "2024"
default-run = "axum-askama-app"

[dependencies]
axum = "0.7"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "time"] }
bcrypt = "0.15"
tower-sessions = "0.13"
tower-sessions-redis-store = "0.14"
dotenvy = "0.15"
async-trait = "0.1"
time = { version = "0.3", features = ["serde"] }
printpdf = "0.6"
validator = { version = "0.18", features = ["derive"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
